--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "astro": "^5.15.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
+  },
+  "devDependencies": {
+    "tw-animate-css": "^1.4.0"
   }
 }
