--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "astro": "^5.15.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.24",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.554.0",
+    "p-limit": "^7.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "tw-animate-css": "^1.4.0"
   }
 }
