--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "workbox-window": "^7.4.0"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
+    "@vite-pwa/astro": "^1.1.1",
     "tw-animate-css": "^1.4.0"
   }
 }
