--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "p-limit": "^7.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "streamsaver": "^2.0.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
+    "@types/streamsaver": "^2.0.5",
     "tw-animate-css": "^1.4.0"
   }
 }
